# Parallel-Retrieval-Engine-for-RAG

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.tmp_pydeps/pyarrow-24.0.0.dist-info/: RECORD
docs/analysis/: README.md  latest-benchmark-review.md  latest-cluster-benchmark-review.md  report_mapping.md
docs/development/: algorithm_design.md  benchmark_data.md  codebase_layout.md  data_pipeline_and_benchmarks.md  dataset_pipeline.md  dev_workflow.md  developer_guide.md  development_plan_parallel_rag_cpp.md  environment_setup.md  parallel_agent_memory_retriever_plan.md  phase0_scope_parallel_rag_cpp.md  phase1_codebase_parallel_rag_cpp.md  phase2_data_preparation_parallel_rag_cpp.md  project_scope.md  project_specification.md  source_guide.md
docs/plans/: 2026-06-15-phase-0-documentation.md  2026-06-15-phase-1-foundation.md  2026-06-15-phase-2-dataset-generator-loader.md  2026-06-15-phase-3-sequential-exact-retrieval.md  2026-06-15-phase-4-blocking-mpi-parallel-retrieval.md  2026-06-15-phase-5-correctness-checker.md  2026-06-15-phase-6-benchmark-run-metrics.md  2026-06-15-phase-7-experiment-automation.md  2026-06-15-phase-8-plan-reframe.md  2026-06-15-results-csv-output-reference.md  2026-06-15-usage-onboarding-docs.md  2026-06-16-benchmark-analysis-layer.md  2026-06-16-phase-8-faiss-baseline-comparison.md  2026-06-17-mpi-cluster-setup-docs.md  2026-06-17-runtime-target-recalibration-and-final-rerun.md  2026-06-22-2-node-local-plus-199-cluster-benchmark.md  2026-06-23-cluster-benchmark-full-bundle.md  2026-06-23-cluster-no-faiss-expedited-rerun.md  2026-06-23-external-benchmark-storage-rerun.md  2026-06-23-two-node-runbook-doc-refactor.md  2026-06-24-generic-n-node-cluster-bundle.md
docs/usage/: README.md  benchmark-workflows.md  getting-started-wsl.md  results-csv-reference.md  retrieval-workflows.md  troubleshooting.md
docs/usage/mpi-cluster/: README.md  cluster-assembly-and-validation.md  cluster-runbook.md  node-bootstrap-macos-multipass.md  node-bootstrap-ubuntu.md  node-bootstrap-wsl.md  troubleshooting.md  two-node-runbook-local-plus-199.md  two-node-runbook-two-nodes.md  two-nodes-runbook.md
docs/usage/mpi-cluster/examples/: benchmark_selection.env.example  hosts.example  n_node_bundle.env.example  ssh_config.example  two_node_bundle.env.example
include/: BenchmarkMetrics.hpp  BinaryDataset.hpp  Config.hpp  CorrectnessChecker.hpp  Logger.hpp  MpiSession.hpp  MpiUtils.hpp  ParallelRetriever.hpp  SequentialRetriever.hpp  TopKHeap.hpp
scripts/: analyze_benchmarks.py  benchmark_common.sh  benchmark_csv.py  cluster_common.sh  cluster_n_node_common.sh  common.sh  configure_debug.sh  configure_release.sh  faiss_compare.py  phase8_common.py  plot_results.py  prepare_squad_minilm.py  requirements-faiss.txt  requirements-phase8.txt  run_all_experiments.sh  run_calibrate_target.sh  run_cluster_n_node_bundle.sh  run_cluster_postprocess.sh  run_cluster_two_node_bundle.sh  run_correctness.sh  run_faiss_comparison.sh  run_granularity.sh  run_select_N.sh  run_smoke_tests.sh  run_speedup.sh  setup_wsl_dev_env.sh
src/: BenchmarkMetrics.cpp  BinaryDataset.cpp  Config.cpp  CorrectnessChecker.cpp  Logger.cpp  MpiSession.cpp  MpiUtils.cpp  ParallelRetriever.cpp  SequentialRetriever.cpp  TopKHeap.cpp  main_parallel.cpp  main_sequential.cpp
tests/: BenchmarkMetricsTest.cpp  BinaryDatasetTest.cpp  ConfigLoggerTest.cpp  CorrectnessCheckerTest.cpp  ParallelRetrieverTest.cpp  SequentialRetrieverTest.cpp
tests/cmake/: CheckGeneratorDeterminism.cmake  GenerateAndInspectDataset.cmake  RunBenchmarkAllExperimentsSmoke.cmake  RunBenchmarkAnalysisCalibrationAwareSmoke.cmake  RunBenchmarkAnalysisInvalidCorrectnessSmoke.cmake  RunBenchmarkAnalysisMissingInputFail.cmake  RunBenchmarkAnalysisSmoke.cmake  RunBenchmarkCalibrateTargetNOnlySmoke.cmake  RunBenchmarkCalibrateTargetNPlusQSmoke.cmake  RunBenchmarkCorrectnessSmoke.cmake  RunBenchmarkGranularitySmoke.cmake  RunBenchmarkSelectNSmoke.cmake  RunBenchmarkSpeedupSmoke.cmake  RunClusterBundleDryRunSmoke.cmake  RunClusterNNodeBundleDryRunSmoke.cmake  RunClusterPostprocessNoFaissSmoke.cmake  RunClusterPostprocessSmoke.cmake  RunConfigureScriptsSmoke.cmake  RunFaissComparisonTableSmoke.cmake  RunFaissComparisonWorkflowSmoke.cmake  RunParallelDimensionMismatchFail.cmake  RunParallelLimitNSmoke.cmake  RunParallelRetrievalSmoke.cmake  RunParallelRunMetricsSmoke.cmake  RunParallelWorldSizeGtNSmoke.cmake  RunSequentialDimensionMismatchFail.cmake  RunSequentialLimitNSmoke.cmake  RunSequentialRetrievalSmoke.cmake  RunSequentialRunMetricsSmoke.cmake  RunVerifyResultsMalformedFail.cmake  RunVerifyResultsMismatchSmoke.cmake  RunVerifyResultsSmoke.cmake
tmp_clion_probe/: DartConfiguration.tcl
tools/: SyntheticGeneratorCommon.hpp  generate_queries.cpp  generate_vectors.cpp  inspect_dataset.cpp  verify_results.cpp
